New build and API URL Changes

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ NODE_ENV=TEST
 JWT_SECRET=randwdkjkjefnjken
 
 #REACT_APP_API_URL=http://localhost:5008
-REACT_APP_API_URL=https://ec2-13-60-180-53.eu-north-1.compute.amazonaws.com:5008
+REACT_APP_API_URL=https://amitytinder-backend-73bfbb3a2f6e.herokuapp.com:5008
 
 CLOUDINARY_CLOUD_NAME=dvztynz8i
 CLOUDINARY_API_KEY=776496937292555
